# netsocket

./: .gitignore  AI.md  Dockerfile  LICENSE  NODES.md  README.md  compose.yaml  docker-launch.bat  docker-push.bat  package-lock.json  package.json
.github/workflows/: docker-push.yml  njsscan.yml  test.yml
extensions/iOSNotification/: Tweak.xm  build.sh
extensions/mirror/: index.html
extensions/overlay/: index.html  package-lock.json  package.json  vite.config.js
extensions/overlay-cpp/: netsocket.sln
extensions/overlay-electron/: build.bat  build.sh  index.html  index.js  package-lock.json  package.json  preload.js
extensions/overlay/src-tauri/: Cargo.toml  tauri.conf.json
extensions/overlay/src-tauri/capabilities/: default.json
extensions/overlay/src-tauri/src/: config.rs  hotkeys.rs  lib.rs  overlay.rs  platform.rs  settings_store.rs  websocket.rs
extensions/wirelessAdapter/: platformio.ini
frontend/: editor.html  index.html
frontend/public/: createNode.js  graph-background.xcf  inset.browser.js  litegraph-editor.css  litegraph.css  litegraph.js
scripts/: addPortMeta.js  fixHueNodeTypes.js  generateHueNodes.js  patchGenerateHueFolders.js  reorganizeHueNodes.js
server/: config.js  index.js  log.js
tests/: forEach.test.js  hueNodes.test.js  indexHtml.test.js  killProcessOnPort.test.js  loginLogic.test.js  loginPage.dom.test.js  mcpAgent.test.js  mcpExecuteStandalone.test.js  newNodes.test.js  nodeImporter.test.js  quickWebSearch.test.js  saveStateRestore.test.js  saveUsers.test.js  sessionAuth.test.js  webResearchTools.test.js
(+376 files in other folders)
