[package]
name = "netsocket-overlay"
version = "1.0.0"
description = "Spotlight-style desktop overlay for netsocket"
authors = ["netsocket"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
parking_lot = "0.12"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
